# ChangeLog for media-video/nvidia-glx 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-glx/Attic/ChangeLog,v 1.34 2004/02/01 02:47:51 azarah Exp $

*nvidia-glx-1.0.5336 (01 Feb 2004)

  01 Feb 2004; Martin Schlemmer <azarah@gentoo.org> nvidia-glx-1.0.5336.ebuild:
  Update version

  01 Feb 2004; Martin Schlemmer <azarah@gentoo.org> nvidia-glx-1.0.5332.ebuild,
  files/nvidia-glx-1.0.5332-defines.patch:
  Remove dup patch.

  25 Jan 2004; Caleb Tennis <caleb@gentoo.org> nvidia-glx-1.0.5332.ebuild:
  Add a warning for Qt users that GL linkage may be broken after emerging this.

*nvidia-glx-1.0.5332 (23 Jan 2004)

  23 Jan 2004; <augustus@gentoo.org> nvidia-glx-1.0.5332.ebuild,
  files/nvidia-glx-1.0.5332-defines.patch:
  New NVIDIA driver 5332 released to public. See NVIDIA's page for full details:
  http://www.nvidia.com/object/linux_display_amd64_1.0-5332.html

*nvidia-glx-1.0.5328-r1 (05 Jan 2004)

  05 Jan 2004; Donnie Berkholz <spyderous@gentoo.org>;
  nvidia-glx-1.0.5328-r1.ebuild:
  Fixing TLS test for bug #36551. Thanks to Ronald Hummelink
  <gentoo-bugzilla@hummelink.xs4all.nl> for the patch.

  26 Dec 2003; Donnie Berkholz <spyderous@gentoo.org>; metadata.xml:
  Adding metadata.xml.

*nvidia-glx-1.0.5328 (26 Dec 2003)

  26 Dec 2003; Donnie Berkholz <spyderous@gentoo.org>;
  nvidia-glx-1.0.5328.ebuild, files/nvidia-glx-1.0.5328-defines.patch:
  Version bump.

  02 Nov 2003; Martin Schlemmer <azarah@gentoo.org>
  nvidia-glx-1.0.4496-r1.ebuild:
  Add PKG_V to make sure updating the package used will not break things again.

*nvidia-glx-1.0.4496-r1 (02 Nov 2003)

  02 Nov 2003; Martin Schlemmer <azarah@gentoo.org>
  nvidia-glx-1.0.4496-r1.ebuild:
  Update nVidia package to latest (pkg2), bug #32430.

*nvidia-glx-1.0.4499 (15 Oct 2003)

  15 Oct 2003; Daniel Robbins <drobbins@gentoo.org>:
  nvidia-glx-1.0.4499.ebuild: New version of the ebuild for AMD64 systems.