@@ -1,6 +1,9 @@
 # ChangeLog for media-video/nvidia-glx 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-glx/Attic/ChangeLog,v 1.34 2004/02/01 02:47:51 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-glx/Attic/ChangeLog,v 1.35 2004/02/07 22:29:17 brad_mssw Exp $
+
+  07 Feb 2004; Brad House <brad_mssw@gentoo.org> nvidia-glx-1.0.5332.ebuild:
+  stable on amd64
 
 *nvidia-glx-1.0.5336 (01 Feb 2004)
 
